--- a/SA_ NLP_Pets.ipynb
+++ b/SA_ NLP_Pets.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Most of the code here was modified from Samantha Jone's article on Tweepy: https://www.linkedin.com/pulse/extracting-tweet-information-tweepy-beautifulsoup-samantha-jones/###\n",
     "\n",
-    "Samantha Jones: https://www.linkedin.com/in/samanthaaldene/https://www.linkedin.com/in/samanthaaldene/ \n",
+    "Samantha Jones: https://www.linkedin.com/in/samanthaaldene/ \n",
     "\n",
     "The Tweepy site is self is here: https://www.tweepy.org/https://www.tweepy.org/"
    ]
