--- a/SA_ NLP_Pets.ipynb
+++ b/SA_ NLP_Pets.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "The motivation for this analysis is to help a company see what topics or other factors might correlate with better or worse sentiment towards a company\n",
     "\n",
-    "Most of the code here was modified from Samantha Jone's article on Tweepy: https://www.linkedin.com/pulse/extracting-tweet-information-tweepy-beautifulsoup-samantha-jones/###\n",
+    "Most of the code for pulling the Twitter data was gleaned from Samantha Jone's article on Tweepy: https://www.linkedin.com/pulse/extracting-tweet-information-tweepy-beautifulsoup-samantha-jones/###\n",
     "\n",
     "Samantha Jones: https://www.linkedin.com/in/samanthaaldene/ \n",
     "\n",
