--- a/SA_ NLP_Pets.ipynb
+++ b/SA_ NLP_Pets.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Samantha Jones: https://www.linkedin.com/in/samanthaaldene/ \n",
     "\n",
-    "The Tweepy site is self is here: https://www.tweepy.org/https://www.tweepy.org/"
+    "The Tweepy site is self is here: https://www.tweepy.org/"
    ]
   },
   {
