--- a/SA_ NLP_Pets.ipynb
+++ b/SA_ NLP_Pets.ipynb
@@ -96,10 +96,10 @@
    "source": [
     "#Handle Twitter API authentication; produces a json file\n",
     "\n",
-    "consumer_key = \"s2RQHHhTBhg7rmGP2r8K9bKmZ\"\n",
-    "consumer_secret = \"BNspDCtvyIIWSfSaZ3sWVDE82JSqVAoel4oxiD7rjiKhHCq1rZ\"\n",
-    "access_token = \"4243232613-GfIElLNDpFCVWUlMqMU6ZGSah9uVfJZJ6W1AeCR\"\n",
-    "access_token_secret = \"rURKXxsocX8ivZVEVugOG0Y8ti9VTIS2nzUAVztCWSI9s\"\n",
+    "consumer_key = \"\"\n",
+    "consumer_secret = \"\"\n",
+    "access_token = \"\"\n",
+    "access_token_secret = \"\n",
     " \n",
     "auth = tweepy.OAuth1UserHandler(\n",
     "   consumer_key, consumer_secret, access_token, access_token_secret\n",
